cleanup types, swagger
